configure_file(
  input: 'org.gnome.GPaste.Ui.dbus.in',
  configuration: conf,
  output: 'org.gnome.GPaste.Ui.service',
  install: true,
  install_dir: dbus_service_dir,
)

configure_file(
  input: 'org.gnome.GPaste.Preferences.dbus.in',
  configuration: conf,
  output: 'org.gnome.GPaste.Preferences.service',
  install: true,
  install_dir: dbus_service_dir,
)

configure_file(
  input: 'org.gnome.GPaste.dbus.in',
  configuration: conf,
  output: 'org.gnome.GPaste.service',
  install: true,
  install_dir: dbus_service_dir,
)
