gpaste_ui_sources = [
  'gpaste-ui-about.c',
  'gpaste-ui-backup-history.c',
  'gpaste-ui-delete-history.c',
  'gpaste-ui-delete-item.c',
  'gpaste-ui-edit-item.c',
  'gpaste-ui-empty-history.c',
  'gpaste-ui-empty-item.c',
  'gpaste-ui-header.c',
  'gpaste-ui-history-action.c',
  'gpaste-ui-history-actions.c',
  'gpaste-ui-history.c',
  'gpaste-ui-item-action.c',
  'gpaste-ui-item-skeleton.c',
  'gpaste-ui-item.c',
  'gpaste-ui-new-item.c',
  'gpaste-ui-panel-history.c',
  'gpaste-ui-panel.c',
  'gpaste-ui-reexec.c',
  'gpaste-ui-search-bar.c',
  'gpaste-ui-search.c',
  'gpaste-ui-settings.c',
  'gpaste-ui-shortcuts-window.c',
  'gpaste-ui-switch.c',
  'gpaste-ui-upload-item.c',
  'gpaste-ui-window.c',
  'gpaste-ui.c',
  'tmp/gpaste-client.c',
  'tmp/gpaste-client-item.c',
  'tmp/gpaste-util.c',
  'tmp/gpaste-settings.c',
  'tmp/gpaste-update-enums.c',
  'tmp/gpaste-settings-ui-panel.c',
  'tmp/gpaste-settings-ui-stack.c',
  'tmp/gpaste-settings-ui-widget.c',
  'tmp/gpaste-item-enums.c'
]

gpaste_ui_headers = [
  'gpaste-ui-about.h',
  'gpaste-ui-backup-history.h',
  'gpaste-ui-delete-history.h',
  'gpaste-ui-delete-item.h',
  'gpaste-ui-edit-item.h',
  'gpaste-ui-empty-history.h',
  'gpaste-ui-empty-item.h',
  'gpaste-ui-header.h',
  'gpaste-ui-history-action.h',
  'gpaste-ui-history-actions.h',
  'gpaste-ui-history.h',
  'gpaste-ui-item-action.h',
  'gpaste-ui-item-skeleton.h',
  'gpaste-ui-item.h',
  'gpaste-ui-new-item.h',
  'gpaste-ui-panel-history.h',
  'gpaste-ui-panel.h',
  'gpaste-ui-reexec.h',
  'gpaste-ui-search-bar.h',
  'gpaste-ui-search.h',
  'gpaste-ui-settings.h',
  'gpaste-ui-shortcuts-window.h',
  'gpaste-ui-switch.h',
  'gpaste-ui-upload-item.h',
  'gpaste-ui-window.h',
  'tmp/gpaste-client.h',
  'tmp/gpaste-client-item.h',
  'tmp/gpaste-util.h',
  'tmp/gpaste-settings.h',
  'tmp/gpaste-update-enums.h',
  'tmp/gpaste-settings-ui-panel.h',
  'tmp/gpaste-settings-ui-stack.h',
  'tmp/gpaste-settings-ui-widget.h',
  'tmp/gpaste-item-enums.h'
]

gpaste_ui_headers_dep = declare_dependency(
  include_directories: include_directories('tmp', '../libgpaste'),
  sources: gpaste_ui_headers,
)

tmp_inc = include_directories('tmp')
executable(
  'gpaste-ui',
  sources: gpaste_ui_sources,
  install: true,
  dependencies: [ glib_dep, gtk3_dep, gpaste_ui_headers_dep ],
  install_dir: join_paths(get_option('libexecdir'), 'gpaste'),
)
